🐛 fix info text position on mobile

--- a/gatsby-portfolio/src/pages/index.module.scss
+++ b/gatsby-portfolio/src/pages/index.module.scss
@@ -44,7 +44,7 @@
 .seeMoreWrapper {
 	position: absolute;
 	margin: 0 auto;
-	bottom: 10%;
+	bottom: 20%;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -102,6 +102,7 @@
 	}
 	.seeMoreWrapper{
 		font-size: 2rem;
+		bottom: 10%;
 	}
 	.infoIcon{
 		font-size: 2.5rem;
